<resources>
    <string name="app_name">Cidade Inteligente</string>
    <string name="bemvindo">Bem vindo à Aplicação</string>
    <string name="bemvindo2">MSG Classe Java</string>
    <string name="nome">nome</string>
    <string name="iniciar_sessao">Iniciar Sessão</string>
    <string name="titulo">titulo</string>
    <string name="descricao">descricao</string>
    <string name="data">data</string>
    <string name="localizacao">localizacao</string>
    <string name="limpar">Mapa</string>
    <string name="guardar">Guardar</string>
    <string name="titulo_segunda_atividade">Segunda Atividade</string>
    <string name="botao2">Consultar</string>
    <string name="botao_xpto">Voltar</string>
    <string name="opcao1">Opção1</string>
    <string name="opcao2">opcao2</string>
    <string name="opcao3">Opção3</string>
    <string name="opcao4">Opção4</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="consultarNotas">Ver Notas</string>
    <string name="login">login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="about">Sobre</string>
    <string name="textotitulo">Inserir nova nota</string>
    <string name="service_not_available">service_not_available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="no_address_found">no_address_found</string>
    <string name="address_found">address_found</string>
    <string name="invalid_parameters">invalid_parameters</string>
    <string name="geofence_transition_invalid_type">geofence_transition_invalid_type</string>
    <string name="geofence_transition_entered">geofence_transition_entered</string>
    <string name="unknown_geofence_transition">unknown_geofence_transition</string>
    <string name="geofence_transition_exited">geofence_transition_exited</string>
    <string name="geofence_transition_notification_text">geofence_transition_notification_text</string>
    <string name="registar_user">Clique aqui para registar!</string>
    <string name="registar_texto">Inserir dados pessoais</string>
    <string name="dta_nascimento">Data nascimento YYYY-MM-DD</string>
</resources>
