<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_guardar_notas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NotasActivity">

    <TextView
        android:id="@+id/textotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textotitulo"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_below="@id/textotitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/edittitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo" />
        <EditText
            android:id="@+id/editdescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao" />
        <EditText
            android:id="@+id/editdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data" />
        <EditText
            android:id="@+id/editlocalizacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/localizacao" />

        <Button
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            android:onClick="guardar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/limpar"
            android:onClick="limpar"/>

        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/botao2"
            android:onClick="botao2"/>

    </LinearLayout>
</RelativeLayout>